# claw-anything

./: .gitignore  README.md  pyproject.toml  settings_guide.txt
mad/: __init__.py  __main__.py  agent_registry.py  cli.py  config.py  console.py  costs.py  discord.py  discord_bot.py  i18n.py  metrics.py  project_detect.py  projects.py  runner.py  state.py  summary.py  tickets.py
mad/agents/: __init__.py  brainstorm.py  coder.py  finalizer.py  planner.py  reviewer.py
rules/: general_coding_rules.md  rules_csharp_unity.md  rules_csharp_unity_mobile.md  rules_frontend_dependency_research.md  rules_python_fastapi_nextjs_postgres.md  rules_python_fastapi_nextjs_sqlite.md  rules_python_fastapi_react_vite.md  rules_python_gtk4.md  rules_python_quant_kiwoom.md  rules_python_typer_pipeline.md  rules_python_typer_topic_selector.md  rules_typescript_nextjs_fullstack.md  rules_typescript_react_electron.md  rules_typescript_reactnative_python_fastapi.md
