[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mad"
version = "1.0.0"
description = "Multi-Agent Development System — Plan, Code, Review projects using Claude Code"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
mad = "mad.cli:cli"

[tool.setuptools.packages.find]
include = ["mad*"]
